--- a/app/src/main/res/layout/activity_edit_all.xml
+++ b/app/src/main/res/layout/activity_edit_all.xml
@@ -14,39 +14,41 @@
         android:gravity="center_horizontal"
         android:text="Edit Profil"/>
     <EditText
-        android:id="@+id/edtProfilName"
+        android:id="@+id/edtAllName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:hint="Nama"/>
+
     <Spinner
-        android:id="@+id/spinnerGender"
+        android:id="@+id/spinnerAllGender"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:entries="@array/jenis_kelamin"/>
+        android:entries="@array/jenis_kelamin" />
+
     <EditText
-        android:id="@+id/edtEmail"
+        android:id="@+id/edtAllEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
         android:layout_margin="16dp"/>
     <EditText
-        android:id="@+id/edtTelp"
+        android:id="@+id/edtAllTelp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Telp"
         android:layout_margin="16dp"
         android:inputType="phone"/>
     <EditText
-        android:id="@+id/edtAddress"
+        android:id="@+id/edtAllAddress"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:hint="Alamat"
         android:layout_margin="16dp"
         android:inputType="textMultiLine"/>
     <Button
-        android:id="@+id/btnEditSave"
+        android:id="@+id/btnEditSaveAll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
