--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -71,8 +71,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textSize="18sp"
-                    android:text="laki-laki"/>
+                    android:text="laki-laki"
+                    android:textSize="18sp" />
 
             </LinearLayout>
             <LinearLayout
